@@ -1,10 +1,16 @@
+Tue Aug  7 10:07:03 2001  Peter Naulls  <peter@erble.freeserve.co.uk>
+
+	* sys/_swi.s (__swihack): New.  Missing from initial checkin.
+	(_swihack_build): Likewise.
+
 Tue Aug  7 09:14:12 2001  Peter Naulls  <peter@erble.freeserve.co.uk>
 
 	* sys/_swi.s: New file.
 	* sys/os.h (_swi, _swix): Add function prototype.
 	(_FLAGS, _IN, _INR, _OUT, _OUTR, _BLOCK, _RETURN, _C, _N, _Z): Add
 	supporting macros.
-
+	* Makefile (SYS_ASM): Add _swis.o.
+	
 Mon Aug  6 09:16:22 2001  Peter Naulls  <peter@erble.freeserve.co.uk>
 
 	* signal/_signal.s (__h_sigint): Unset escape condition flag
